[gd_scene load_steps=3 format=3 uid="uid://c2se8qdf2y4ub"]

[ext_resource type="Script" uid="uid://bflrjjqt540hs" path="res://content/numeral/numeral.gd" id="1_e1411"]
[ext_resource type="Theme" uid="uid://jtkek1w5hnou" path="res://main/theme.tres" id="2_gr3lk"]

[node name="Numeral" type="HFlowContainer"]
offset_right = 360.0
offset_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("1_e1411")

[node name="OQuesion" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "II. — Пост: "

[node name="IsCompound" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "простое?"
flat = true

[node name="LilSep" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = ", "

[node name="Type" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "количеств.?"
flat = true

[node name="LilSep2" type="Label" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = ", "

[node name="Category" type="Button" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "разряд?"
flat = true

[node name="Separator" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "; "

[node name="Separator2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "непост: "

[node name="Case" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "падеж?"
flat = true

[node name="LilSep3" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = ", "

[node name="Number" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "число?"
flat = true

[node name="LilSep4" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = ", "

[node name="Gend" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_gr3lk")
text = "род?"
flat = true

[connection signal="pressed" from="IsCompound" to="." method="_on_is_compound_pressed"]
[connection signal="pressed" from="Type" to="." method="_on_type_pressed"]
[connection signal="pressed" from="Category" to="." method="_on_category_pressed"]
[connection signal="pressed" from="Case" to="." method="_on_case_pressed"]
[connection signal="pressed" from="Number" to="." method="_on_number_pressed"]
[connection signal="pressed" from="Gend" to="." method="_on_gend_pressed"]
